@@ -7,6 +7,8 @@ Revision history for Perl extension App-Egaz
     - Move tt2 to share/
     - `egaz template`
         - Add `--mash`
+        - Add `--fasttree`
+        - Apply `nw_order` to trees
 
 0.2.5 2020-03-06T19:07:31Z
 
